0.25 2018-12-18
        - Added "piwik.api_p" method.

0.24 2018-11-13
        - Added stash value "piwik.embed".

0.23 2018-11-07
        - Added piwik_tag 'as-script' and shortcut 'piwik'
          for track_script.

0.22 2018-11-01
        - Added missing meta spec version (manwar++).
        - Fixed Mojolicious dependency for nested helpers.

0.21 2018-10-29
        - Fix description of 'embed' flag
        - Deprecate piwik_api and piwik_api_url in favor of
          piwik->api and piwik->api_url
        - Fix permissions of text files.
        - Remove deprecated "Mojo::Transaction::success" call.

0.20 2018-03-04
        - Fix secure flag to accept https scheme when
          provided by URL.
        - Update link to ULD information.
        - Support https in case base URL is https.
        - Updated references to Matomo.

0.19 2016-07-21
        - Fixed support for Mojolicious 7.

0.18 2015-05-26
        - Updated to support new URL escaping in Mojolicious.

0.17 2015-04-18
        - Fixed dependency.

0.16 2015-04-18
        - Update for Mojolicious 6.

0.15 2014-08-18
        - Clear up documentation.

0.14 2014-06-04
        - Compatible with Mojolicious >= 5.0.

0.13 2014-04-11
        - Make it coherent Artistic License 2.0.

0.12 2013-05-20
        - Fixed Mojolicious 4.0 compatibility.

0.11 2013-04-03
        - Improved test suite.
	- Fixed non-blocking helper.

0.10 2013-03-04
        - Delete mentioning api_test in documentation.
	- Declare 'opt-out' and 'opt-out-url' as EXPERIMENTAL.
	- Introduce piwik_api_url helper as EXPERIMENTAL.
        - Improve documentation.
	- Fix POD error.

0.09 2013-03-01
	- Update year.
 	- Update comments.
        - Documentation tweaks.
	- First implementation of Tracking API.
	- Add opt-out iframe.
	- Add opt-out-link tag.
	- Improve documentation.

0.08 2012-12-02
	- Fixed documentation.

0.07 2012-12-01
        - Fixed license information on CPAN.
	- Fixed Changes documentation.

0.06 2012-12-01